<resources>
    <string name="app_name">finalproject</string>
    <string name="create_an_account">Create an Account</string>
    <string name="log_in">Log In</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logged_in">Logged In</string>
    <string name="happy">Happy</string>
    <string name="todo">TODO</string>
    <string name="calendar_pic">calendar pic</string>
    <string name="how_do_you_feel_today">How do you feel today?</string>
    <string name="sad">sad</string>
    <string name="angry">Angry</string>
    <string name="envious">Envious</string>
    <string name="stressed">Stressed</string>
    <string name="productive">Productive</string>
    <string name="energetic">Energetic</string>
    <string name="calm">Calm</string>
    <string name="sleepy">Sleepy</string>
    <string name="lonely">Lonely</string>
    <string name="pause">PAUSE</string>
    <string name="back">BACK</string>
    <string name="pause_start">PAUSE START</string>
    <string name="mood_music">Mood Music</string>
</resources>
