<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DACCE7">

    <ImageButton
        android:id="@+id/btnHappy"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/btnLonely"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSad"
        app:srcCompat="@android:color/holo_purple" />

    <TextView
        android:id="@+id/textHappy"
        android:layout_width="81dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="222dp"
        android:layout_marginRight="222dp"
        android:layout_marginBottom="10dp"
        android:text="@string/happy"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/textLonely"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnHappy"
        app:layout_constraintTop_toBottomOf="@+id/textSad" />

    <ImageButton
        android:id="@+id/btnSad"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/btnHappy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalm"
        app:srcCompat="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/textSad"
        android:layout_width="81dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="223dp"
        android:layout_marginRight="223dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sad"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/textHappy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSad"
        app:layout_constraintTop_toBottomOf="@+id/textCalm" />

    <ImageButton
        android:id="@+id/btnSleepy"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/btnCalm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnProductive"
        app:srcCompat="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textSleepy"
        android:layout_width="81dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="223dp"
        android:layout_marginRight="223dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sleepy"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/textCalm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSleepy"
        app:layout_constraintTop_toBottomOf="@+id/textProductive" />

    <ImageButton
        android:id="@+id/btnLonely"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHappy"
        app:srcCompat="@android:color/black" />

    <TextView
        android:id="@+id/textLonely"
        android:layout_width="81dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="223dp"
        android:layout_marginRight="223dp"
        android:layout_marginBottom="60dp"
        android:text="@string/lonely"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toEndOf="@+id/btnLonely"
        app:layout_constraintTop_toBottomOf="@+id/textHappy" />

    <ImageButton
        android:id="@+id/btnProductive"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/btnSleepy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEnergetic"
        app:srcCompat="@color/colorAccent" />

    <TextView
        android:id="@+id/textProductive"
        android:layout_width="91dp"
        android:layout_height="33dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="223dp"
        android:layout_marginRight="223dp"
        android:layout_marginBottom="10dp"
        android:text="@string/productive"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/textSleepy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/btnProductive"
        app:layout_constraintTop_toBottomOf="@+id/textEnergetic" />

    <ImageButton
        android:id="@+id/btnEnergetic"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/btnProductive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAngry"
        app:srcCompat="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/textEnergetic"
        android:layout_width="90dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="223dp"
        android:layout_marginRight="223dp"
        android:layout_marginBottom="10dp"
        android:text="@string/energetic"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/textProductive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toEndOf="@+id/btnEnergetic"
        app:layout_constraintTop_toBottomOf="@+id/textAngry" />

    <ImageButton
        android:id="@+id/btnAngry"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/btnEnergetic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeader"
        app:layout_constraintVertical_bias="0.42000002"
        app:srcCompat="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/textAngry"
        android:layout_width="81dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="222dp"
        android:layout_marginRight="222dp"
        android:layout_marginBottom="10dp"
        android:text="@string/angry"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/textEnergetic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAngry"
        app:layout_constraintTop_toBottomOf="@+id/txtHeader" />

    <ImageButton
        android:id="@+id/btnCalm"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/btnSad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSleepy"
        app:srcCompat="@color/design_default_color_primary" />

    <TextView
        android:id="@+id/textCalm"
        android:layout_width="81dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="223dp"
        android:layout_marginRight="223dp"
        android:layout_marginBottom="10dp"
        android:text="@string/calm"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/textSad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCalm"
        app:layout_constraintTop_toBottomOf="@+id/textSleepy" />

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="296dp"
        android:layout_height="40dp"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="176dp"
        android:layout_marginRight="176dp"
        android:text="@string/how_do_you_feel_today"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="30sp"
        android:textStyle="italic"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>